[project]
name = "function"
description = "Python HTTP function for E2E tests"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
  "httpx",
  "pytest",
  "pytest-asyncio"
]
authors = [
  { name="The Knative Authors", email="knative-dev@googlegroups.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"